--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -162,3 +162,8 @@
 body {
   letter-spacing: var(--tracking-normal);
 }
+
+.bg-gradient-radial {
+  background: #ffffff;
+  background: radial-gradient(circle, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 92%);
+}
